@@ -1,5 +1,6 @@
 1.4.4 - TBD
 
+* Plugins can now modify the main window tabs.
 * Added banner rendering.
 * Improve bed rendering for Minecraft 1.12 (colored beds).
 * Y clipping is now a per-scene setting, with an upper clip value.
